--- a/projects/srb-side-menu/src/lib/srb-side-menu.html
+++ b/projects/srb-side-menu/src/lib/srb-side-menu.html
@@ -3,8 +3,7 @@
   <div class="relative border-b border-white/20">
     <a class="flex items-center gap-4 py-6 px-8" href="#/">
       <h6 class="block antialiased tracking-normal font-sans text-base font-semibold leading-relaxed text-white">
-        <span [classList]="[titleColor()]" >SRB</span>
-        <span class="font thin">Side Menu</span>
+        <span [classList]="[titleColor()]" >{{ title() }}</span>&nbsp;<span class="font thin">{{ subtitle() }}</span>
       </h6>
     </a>
     <button
